SERVER-13714 fix enumeration of non-top-level indexed negations